# comfyui-mcp-server

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  comfyui_client.py  feature_flags.py  pyproject.toml  server.py
.github/workflows/: docker.yml  test.yml
docs/: DOCKER.md  MCP_CONFIG_README.md  ROADMAP.md
examples/: docker-compose.rustfs.yml
managers/: publish_manager.py  storage.py
tests/: HOW_TO_TEST_PUBLISH.md  README.md  test_features.py  test_publish_s3.py
tools/: jobs_api.py  models.py  nodes.py  publish.py  system.py  upload.py
