[project]
name = "comfyui-mcp-server"
version = "0.1.2"
description = "A lightweight MCP server that lets AI agents generate and iteratively refine images, audio, and video using a local ComfyUI instance."
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE" }
dependencies = [
    "requests>=2.32.0",
    "mcp>=1.28.0",
    "Pillow>=12.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[tool.uv]
# Flat module layout (modules live at the repo root, not in a package dir),
# so this project is run, not built/installed. Treat it as a non-package project:
# `uv sync` only installs dependencies into the environment.
package = false
